--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {},
   "dependencies": {
     "axios": "^0.21.0",
+    "basic-auth": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "lodash": "^4.17.20",
+    "mysql2": "^2.2.5",
     "require-directory": "^2.1.1",
+    "sequelize": "^6.3.5",
     "validator": "^13.5.1"
   }
 }
